@@ -28,6 +28,7 @@
 - FIX: The workspace resolver doesn't resolve conflicts correctly (IVYDE-212)
 - FIX: dependency order not preserved causing failed builds (IVYDE-170)
 - FIX: Can not add a project specific property file when adding a library (IVYDE-228)
+- FIX: IvyDE log errors while trying to get info on closed projects (IVYDE-229)
 
   version 2.0.0 final
 ==========================
